<resources>
    <string name="app_name">HW3.1</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="registered">Registered</string>
    <string name="show_info">Show Info</string>
</resources>