<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/in_fullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/full_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/LayoutFullName"
            app:layout_constraintStart_toStartOf="@+id/LayoutFullName"
            app:layout_constraintTop_toBottomOf="@+id/LayoutFullName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/in_userName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/user_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/LayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/LayoutFullName"
            app:layout_constraintStart_toStartOf="@+id/LayoutFullName"
            app:layout_constraintTop_toBottomOf="@+id/layoutUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/in_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/LayoutFullName"
            app:layout_constraintStart_toStartOf="@+id/LayoutFullName"
            app:layout_constraintTop_toBottomOf="@+id/LayoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/in_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutRetypePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@id/LayoutFullName"
            app:layout_constraintStart_toStartOf="@+id/LayoutFullName"
            app:layout_constraintTop_toBottomOf="@+id/layoutPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/in_retypePassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/re_type_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/gender"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/layoutRetypePassword"
            app:layout_constraintTop_toBottomOf="@id/layoutRetypePassword" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_gender">

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:text="@string/male" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:backgroundTint="#c6215b"
            android:text="@string/registered"
            app:cornerRadius="40dp"
            app:layout_constraintBottom_toTopOf="@id/btn_info"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#034375"
            android:text="@string/show_info"
            app:cornerRadius="40dp"
            app:layout_constraintTop_toBottomOf="@id/btn_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>